# rs-tonteki-roulette

./: .gitignore  Cargo.toml  README.md  build.sh
html/: index.html  result.html
src/: main.rs
terraform/: main.tf
