[package]
name = "tonteki-roulette"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
tokio = { version = "1.18.0", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_urlencoded = "0.7.1"
lambda_runtime = "0.5.1"
chrono = "0.4.19"
sha2 = "0.10.2"
chrono-tz = "0.6.1"
base64 = "0.20.0-alpha.1"
